@@ -2,10 +2,11 @@ package com.rauio.smartdangjian.server.ai.tool;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyLong;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
@@ -16,20 +17,19 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import com.baomidou.mybatisplus.core.conditions.query.LambdaQueryWrapper;
 import com.rauio.smartdangjian.exception.BusinessException;
-import com.rauio.smartdangjian.server.content.pojo.entity.Article;
-import com.rauio.smartdangjian.server.content.service.ArticleContentBlockService;
-import com.rauio.smartdangjian.server.content.service.article.ArticleService;
+import com.rauio.smartdangjian.server.content.api.ArticleQueryFacade;
+import com.rauio.smartdangjian.server.content.api.ContentQueryFacade;
+import com.rauio.smartdangjian.server.content.api.dto.ArticleSummary;
 
 @ExtendWith(MockitoExtension.class)
 class ArticleDetailToolTest {
 
     @Mock
-    private ArticleService articleService;
+    private ArticleQueryFacade articleQueryFacade;
 
     @Mock
-    private ArticleContentBlockService contentBlockService;
+    private ContentQueryFacade contentQueryFacade;
 
     @InjectMocks
     private ArticleDetailTool articleDetailTool;
@@ -37,10 +37,13 @@ class ArticleDetailToolTest {
     @Test
     @DisplayName("searchArticles 根据关键词搜索文章并返回映射列表")
     void searchArticles() {
-        Article article =
-                Article.builder().id(1L).title("党建理论学习").summary("深入理解党的理论").build();
+        ArticleSummary article = ArticleSummary.builder()
+                .id(1L)
+                .title("党建理论学习")
+                .summary("深入理解党的理论")
+                .build();
 
-        when(articleService.list(any(LambdaQueryWrapper.class))).thenReturn(List.of(article));
+        when(articleQueryFacade.searchByKeyword("党建")).thenReturn(List.of(article));
 
         List<Map<String, Object>> result = articleDetailTool.searchArticles("党建");
 
@@ -48,41 +51,49 @@ class ArticleDetailToolTest {
         assertThat(result.get(0)).containsEntry("id", 1L);
         assertThat(result.get(0)).containsEntry("title", "党建理论学习");
         assertThat(result.get(0)).containsEntry("summary", "深入理解党的理论");
+        verify(articleQueryFacade, times(1)).searchByKeyword("党建");
     }
 
     @Test
     @DisplayName("searchArticles 无匹配结果时返回空列表")
     void searchArticlesNoResults() {
-        when(articleService.list(any(LambdaQueryWrapper.class))).thenReturn(List.of());
+        when(articleQueryFacade.searchByKeyword("不存在")).thenReturn(Collections.emptyList());
 
         List<Map<String, Object>> result = articleDetailTool.searchArticles("不存在");
 
         assertThat(result).isEmpty();
+        verify(articleQueryFacade, times(1)).searchByKeyword("不存在");
     }
 
     @Test
     @DisplayName("getArticleDetail 返回文章详情和内容块")
     void getArticleDetail() {
-        Article article =
-                Article.builder().id(1L).title("党建理论学习").summary("深入理解党的理论").build();
+        ArticleSummary article = ArticleSummary.builder()
+                .id(1L)
+                .title("党建理论学习")
+                .summary("深入理解党的理论")
+                .build();
 
-        when(articleService.getById(any())).thenReturn(article);
-        when(contentBlockService.getByArticleId(anyLong())).thenReturn(List.of());
+        when(articleQueryFacade.getById(1L)).thenReturn(article);
+        when(contentQueryFacade.getByArticleId(1L)).thenReturn(List.of());
 
         Map<String, Object> result = articleDetailTool.getArticleDetail("1");
 
         assertThat(result).containsEntry("id", 1L);
         assertThat(result).containsEntry("title", "党建理论学习");
         assertThat(result).containsKey("contentBlocks");
+        verify(articleQueryFacade, times(1)).getById(1L);
+        verify(contentQueryFacade, times(1)).getByArticleId(1L);
     }
 
     @Test
     @DisplayName("getArticleDetail 文章不存在时抛出 BusinessException")
     void getArticleDetailNotFound() {
-        when(articleService.getById(any())).thenReturn(null);
+        when(articleQueryFacade.getById(999L)).thenReturn(null);
 
-        assertThatThrownBy(() -> articleDetailTool.getArticleDetail("1"))
+        assertThatThrownBy(() -> articleDetailTool.getArticleDetail("999"))
                 .isInstanceOf(BusinessException.class)
                 .hasMessageContaining("文章不存在");
+        verify(articleQueryFacade, times(1)).getById(999L);
     }
 }
